Custom Code From Scratch
I re-designed my new portfolio site and experimented with new different
bits of code. There are some notes in the readme.txt file outlining my
thoughts, where I struggled and what I’d like to improve upon.

--- a/index.html
+++ b/index.html
@@ -4,35 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Lauren Biedrzycki | Front End Web Developer | About Me</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Anton|Cantarell:400,700|Fjalla+One" rel="stylesheet">
 </head>
 <body>
   <header>
     <nav>
-      <ul>
-        <li class="currentpage"><a href="index.html">About Me</a></li> |
+      <ul class="main-nav">
+        <li><h1>Lauren Biedrzycki</h1></li>
+        <li><a class="active-page" href="index.html">About Me</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
       </ul>
     </nav>
-    <h1>Lauren Biedrzycki</h1>
   </header>
-  <hr />
+  <div>
+    <img class="avatar" src="images/lauren_profile_image.jpg" alt="avatar">
+    <h3>Melbourne Based Developer</h3>
+    <p>Hi I'm Lauren, a Developer based in Melbourne, Australia. I have experience in graphic design, front end web development, business management, marketing & communications. I'm always adding and improving my skillset - check out my portfolio page for my latest work.</p>
+    <a href="mailto:lauren.biedrzycki@gmail.com?subject=Yo&body=What up, Lauren? Just saw your amazing portfolio, thought I'd drop you a line in regards to... "><button class="say-hi">Say Hi!</button></a>
+    <br />
+    <br />
+    <br />
+  </div>
   <br />
-  <img class="avatar" src="images/lauren_profile_image.jpg" alt="Avatar">
-  <h3>Front End Web Development Student</h3>
-  <p>I'm currently studying at General Assembly in Melbourne & thoroughly enjoying my entry into the world of coding and web development<p>
-  <br />
   <hr />
-    <footer>
-      <nav>
-        <ul>
-          <li><a href="https://www.facebook.com">Facebook</a></li> |
-          <li><a href="https://www.twitter.com">Twitter</a></li> |
-          <li><a href="https://www.instagram.com">Instagram</a></li> |
-          <li><a href="https://www.linkedin.com">LinkedIn</a></li>
-        </ul>
-      </nav>
-    </footer>
+  <footer>
+    <ul class="social-links">
+      <li class="social-logos"><a href="https://facebook.com/beardzitski"><img src="images/fb_logo.png" alt="Link to Facebook Account"></a></li>
+      <li class="social-logos"><a href="https://github.com/beardzitski"><img src="images/github_logo.png" alt="Link to Github Account"></a></li>
+      <li class="social-logos"><a href="https://www.instagram.com/beardzitski/"><img src="images/instagram_logo.png" alt="Link to Instagram Account"></a></li>
+      <li class="social-logos"><a href="https://www.linkedin.com/in/lauren-beardzitski-5b280a144/"><img src="images/linkedin_logo.png" alt="Link to Linkedin Account"></a></li>
+      <li class="social-logos"><a href="https://twitter.com/beardzitski"><img src="images/twitter_logo.png" alt="Link to Twitter Account"></a></li>
+      <li class="social-logos"><a href="mailto:lauren.biedrzycki@gmail.com?subject=Yo&body=What up, Lauren? Just saw your amazing portfolio, thought I'd drop you a line in regards to... "><img src="images/lb_logo.png" alt="Click to Email Lauren"></a></li>
+    </ul>
+    <h6>&copy; 2017 Lauren Biedrzycki | All Rights Reserved</h6>
+  </footer>
 </body>
 </html>
